add responsive css

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
 
     <script src="nav-resp.js"></script>
     <script src="js/footer-nav-mob.js"></script>
-    <script src="js/selectFx.js"></script> -->
+    <script src="js/selectFx.js"></script> 
 </body>
 
 </html>
